# ml-small

./: Lab1.py  Lab2.py  Lab3.ipynb  Lab3.py  processed_variant_13.csv  pyproject.toml
data/: variant_13_Male.csv
