[project]
name = "Lab1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["pandas>=3.0.1", "numpy>=2.4.2", "matplotlib>=3.10.8", "scipy>=1.17.0", "seaborn>=0.13.2", "scikit-learn>=1.8.0", "xgboost>=3.2.0", "lightgbm>=4.6.0", "tensorflow>=2.21.0", "copulas>=0.14.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
